--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <!-- NAVIGATION -->
-  <nav>
+  <nav class="contianer">
     <div>
       <!-- BRANDING -->
       <div>
@@ -45,7 +45,7 @@
 
     <!-- HERO -->
   <section>
-    <div>
+    <div class="container">
       <h1>Get A Grip</h1>
       <h2>20% Off</h2>
       <p>Throughout The Season</p>
@@ -53,7 +53,7 @@
   </section>
 
   <!-- MAIN CONTAINER -->
-  <div>
+  <div class="container">
 
     <!-- SALE BANNER -->
     <section>
@@ -123,7 +123,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <section>
+    <section class="container">
       <div>
         <div>Customer Support</div>
         <ul>
