--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
   <!-- NAVIGATION -->
-  <nav class="contianer">
-    <div>
+  <nav>
+    <div class="container">
       <!-- BRANDING -->
       <div>
         <a href="#">
