--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- HERO -->
   <section class='hero'>
-    <div class="flex container flex-column align-center center">
+    <div class="flex container hero flex-column align-center center">
       <h1>Get A Grip</h1>
       <h2>20% Off</h2>
       <p>Throughout The Season</p>
